--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "initialSampleProj",
-  "displayName": "initialSampleProj"
+  "name": "TestAirBusSSO",
+  "displayName": "TestAirBusSSO"
 }
